--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@ h1{
 	color: aqua;
 }
 p{
-	background-color: #FF2652;
+	background-color: #FF4E61;
 	margin: auto;
 	width: 70%;
 	border: 2px solid black;
+	height: 200px;
+}
+img{
+	float: left;
+	margin-right: 20px;
+	width: 150px;
+	height: 200px;
 }
